[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemies/EnemySprites.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Forest/Shrum.gd" type="Script" id=2]
[ext_resource path="res://Utils/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utils/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utils/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utils/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utils/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utils/WhiteColor.shader" type="Shader" id=8]
[ext_resource path="res://Items/Ammo.tscn" type="PackedScene" id=10]
[ext_resource path="res://Items/Potion.tscn" type="PackedScene" id=11]
[ext_resource path="res://Items/EnergyDrink.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 131, 129 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 132, 133, 134, 135 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 7.62605

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=6]
radius = 96.0

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="CircleShape2D" id=8]
radius = 6.0

[sub_resource type="Animation" id=9]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[node name="Shrum" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
Drops = [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ]

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, -8 )
color = Color( 0, 0, 0, 0.345098 )
polygon = PoolVector2Array( -4, 6, 4, 6, 6, 8, 4, 10, -4, 10, -6, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
vframes = 16
hframes = 16
frame = 131

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.470588 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 8 )

[node name="ShaderPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 9 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
